--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -8,24 +8,15 @@ on:
 permissions:
   contents: write
 
-concurrency:
-  group: scrape-occupancy
-  cancel-in-progress: false
-
 jobs:
   scrape:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-
-      - name: Install deps
-        run: pip install -r requirements.txt
+      - run: pip install -r requirements.txt
 
       - name: Skip outside opening hours (Prague time)
         run: |
@@ -35,8 +26,7 @@ jobs:
             exit 0
           fi
 
-      - name: Run scraper
-        run: python scrape.py
+      - run: python scrape.py
 
       - name: Commit updated CSV
         run: |
